Main page - Fix difficulty level tag appearance on mobile

--- a/Main page/src/sass/abstracts/_breakpoints.scss
+++ b/Main page/src/sass/abstracts/_breakpoints.scss
@@ -1,2 +1,3 @@
 $medium: 48em; // 768px
 $large: 62em; // 992px
+$x-large: 80em; // 1280px
